@@ -1,16 +1,12 @@
 package ru.otus.dataprocessor;
 
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.gson.Gson;
 import ru.otus.model.Measurement;
 
-import java.io.FileReader;
 import java.io.IOException;
-import java.net.URI;
-import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 public class ResourcesFileLoader implements Loader {
@@ -22,24 +18,25 @@ public class ResourcesFileLoader implements Loader {
 
     @Override
     public List<Measurement> load() {
-        URL resourceURL = getClass().getClassLoader().getResource(fileName);
-        List<Measurement> measurement = null;
+
+        List<Measurement> measurement;
         String json;
-        try {
-            json = new String(Files.readAllBytes(Paths.get(URI.create(resourceURL.toString()))));
+        try(InputStream resourceStream = getClass().getClassLoader().getResourceAsStream(fileName)) {
+            json = new String(resourceStream.readAllBytes(), StandardCharsets.UTF_8);
             measurement = readDataFromJsonString(json);
         } catch (IOException exception) {
-            System.out.println("Ошибка при чтении файла");
-            return null;
+          throw new FileProcessException(exception);
         }
 
         //читает файл, парсит и возвращает результат
         return measurement;
     }
 
-    List<Measurement> readDataFromJsonString(String json) {
-        return new Gson().fromJson(json, new TypeReference<List<Measurement>>() {
-        }.getType());
+    List<Measurement> readDataFromJsonString(String json) throws IOException {
+        //Этот вариант не работает
+        //ObjectMapper mapper = new ObjectMapper();
+        //return  mapper.readValue(json, new TypeReference<List<Measurement>>(){});
+        return new Gson().fromJson(json, new TypeReference<List<Measurement>>() {}.getType());
     }
 
 }
